[package]
name = "tomb-helper"
version = "0.1.0"
authors = ["Ben Falconer <ben@falconers.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livesplit-hotkey = "0.5.0"
process-memory = "0.3.0"
libc = "0.2"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["tlhelp32"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "memoryapi", "minwindef", "processthreadsapi"] }
