[package]
name = "tomb-helper"
version = "1.8.0"
authors = ["Ben Falconer <ben@falconers.me.uk>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
dev-version = false

[dependencies]
livesplit-hotkey = "0.5.0"
process-memory = { git = "https://github.com/Tommoa/rs-process-memory.git", rev = "7b9b263932f16fc5864c294efbf338edb0010f39" }
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
itertools = "0.9"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["tlhelp32"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "memoryapi", "minwindef", "processthreadsapi"] }
win32-error = "0.9.0"
